# milvus-Performance-testing

./: .README.md.swp  README.md  background.md  faq.md  main.py  pyproject.toml
scripts/: collection_memory.py  insert_multi_vector.py  insert_single_vector.py  milvus_bench_common.py  query_benchmark.py  update_common.py  update_multi_vector.py  update_single_vector.py
